[gd_scene load_steps=5 format=2]

[ext_resource path="res://resource/sprites/objects/mechanism.png" type="Texture" id=1]
[ext_resource path="res://resource/sprites/objects/DungeonCrawl_ProjectUtumnoTileset.png" type="Texture" id=2]
[ext_resource path="res://src/objects/mechanism/Mechanism.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.3623

[node name="Mechanism" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="Area" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Handle" type="Position2D" parent="."]
visible = false
position = Vector2( -0.593418, -1.03122 )

[node name="Sprite" type="Sprite" parent="Handle"]
position = Vector2( 6.35149, -5.91627 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Mechanism_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Mechanism_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
